Fixed the footer wrap issue, fixed some css watching/building errors.

--- a/src/components/shared/scss/_layout.scss
+++ b/src/components/shared/scss/_layout.scss
@@ -176,7 +176,6 @@ footer {
     line-height: 2em;
     a {
       padding: 0 12px;
-      white-space: nowrap;
       span {
         margin-left: 5px;
       }
